// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render instructions dialog for adding database 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c18 {
  box-sizing: border-box;
  padding: 4px;
}

.c12 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c17 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Database
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 1
          </span>
           - Download Teleport to the node which will run Database Access agent 
          <div
            class="c9"
          >
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-darwin-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              MacOS
            </a>
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 64-bit
            </a>
            <a
              class="c11"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-386-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 32-bit
            </a>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 2
          </span>
           - Login to Teleport
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                tsh login --proxy=localhost:443 --auth=local --user=yassine
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 3
          </span>
           - Generate a join token
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                tctl tokens add --type=db
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 4
          </span>
           - Select the database type and protocol to use
          <div
            class="c16"
          >
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <button
                  class="c15"
                  kind="primary"
                >
                  RDS PostgreSQL
                </button>
              </div>
              <div
                class="c18"
              >
                <button
                  class="c19"
                  kind="secondary"
                >
                  RDS MySQL
                </button>
              </div>
              <div
                class="c18"
              >
                <button
                  class="c19"
                  kind="secondary"
                >
                  Redshift
                </button>
              </div>
              <div
                class="c18"
              >
                <button
                  class="c19"
                  kind="secondary"
                >
                  Cloud SQL PostgreSQL
                </button>
              </div>
              <div
                class="c18"
              >
                <button
                  class="c19"
                  kind="secondary"
                >
                  Cloud SQL MySQL
                </button>
              </div>
              <div
                class="c18"
              >
                <button
                  class="c19"
                  kind="secondary"
                >
                  Self-hosted PostgreSQL
                </button>
              </div>
              <div
                class="c18"
              >
                <button
                  class="c19"
                  kind="secondary"
                >
                  Self-hosted MySQL
                </button>
              </div>
              <div
                class="c18"
              >
                <button
                  class="c19"
                  kind="secondary"
                >
                  Self-hosted MongoDB
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 5
          </span>
           - Start the Teleport agent with the following parameters
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                teleport db start --token=[generated-join-token] --auth-server=localhost:443 --name=[db-name] --protocol=postgres --uri=[uri] --aws-region=[region]
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c9"
        >
          * Note: Learn more about database access in our 
          <a
            class="c11"
            href="https://goteleport.com/docs/database-access/"
            rel="noreferrer"
            target="_blank"
          >
            documentation
          </a>
          .
        </div>
      </div>
      <div
        class="c20"
      >
        <button
          class="c19"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render instructions with token when provided 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c14 {
  box-sizing: border-box;
  padding: 4px;
}

.c19 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c13 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c17 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c18 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #2C3A73;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Database
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 1
          </span>
           - Download Teleport to the node which will run Database Access agent 
          <div
            class="c9"
          >
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-darwin-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              MacOS
            </a>
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 64-bit
            </a>
            <a
              class="c11"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-386-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 32-bit
            </a>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 2
          </span>
           - Select the database type and protocol to use
          <div
            class="c12"
          >
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <button
                  class="c15"
                  kind="primary"
                >
                  RDS PostgreSQL
                </button>
              </div>
              <div
                class="c14"
              >
                <button
                  class="c16"
                  kind="secondary"
                >
                  RDS MySQL
                </button>
              </div>
              <div
                class="c14"
              >
                <button
                  class="c16"
                  kind="secondary"
                >
                  Redshift
                </button>
              </div>
              <div
                class="c14"
              >
                <button
                  class="c16"
                  kind="secondary"
                >
                  Cloud SQL PostgreSQL
                </button>
              </div>
              <div
                class="c14"
              >
                <button
                  class="c16"
                  kind="secondary"
                >
                  Cloud SQL MySQL
                </button>
              </div>
              <div
                class="c14"
              >
                <button
                  class="c16"
                  kind="secondary"
                >
                  Self-hosted PostgreSQL
                </button>
              </div>
              <div
                class="c14"
              >
                <button
                  class="c16"
                  kind="secondary"
                >
                  Self-hosted MySQL
                </button>
              </div>
              <div
                class="c14"
              >
                <button
                  class="c16"
                  kind="secondary"
                >
                  Self-hosted MongoDB
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 3
          </span>
           - Start the Teleport agent with the following parameters
          <div
            class="c17"
          >
            <div
              class="c18"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c19"
              >
                $
              </div>
              <div>
                teleport db start --token=mynewtoken --auth-server=localhost:443 --name=[db-name] --protocol=postgres --uri=[uri] --aws-region=[region]
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c9"
        >
          * Note: Learn more about database access in our 
          <a
            class="c11"
            href="https://goteleport.com/docs/database-access/"
            rel="noreferrer"
            target="_blank"
          >
            documentation
          </a>
          .
        </div>
      </div>
      <div
        class="c20"
      >
        <button
          class="c16"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
